--- a/css/brands.css
+++ b/css/brands.css
@@ -382,6 +382,16 @@ button:hover,
   filter: brightness(90%);
 }
 
+/* Last.fm */
+.button.button-letterboxd {
+  color: #c3000d;
+  background-color: #000000;
+}
+.button.button-letterboxd:hover,
+.button.button-letterboxd:focus {
+  filter: brightness(90%);
+}
+
 /* Letterboxd */
 .button.button-letterboxd {
   color: #ffffff;
