--- a/css/brands.css
+++ b/css/brands.css
@@ -383,7 +383,7 @@ button:hover,
 }
 
 /* Last.fm */
-.button.button-letterboxd {
+.button.button-last.fm {
   color: #000000;
   background-color: #c3000d;
 }
