--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,9 +12,9 @@ body {
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-color: #5361FF;
-    color: white;
-    border-bottom: 2px solid #fff;
+    background-color: #2E3440;
+    color: #D8DEE9;
+    border-bottom: 2px solid #D8DEE9;
 }
 
 .brand-title {
@@ -26,7 +26,7 @@ body {
 .brand-title a{
     text-decoration: none;
     display: block;
-    color: white;
+    color: #D8DEE9;
 }
 
 .navbar-links {
@@ -47,12 +47,12 @@ body {
 .navbar-links li a {
     display: block;
     text-decoration: none;
-    color: white;
+    color: #D8DEE9;
     padding: 1rem;
 }
 
 .navbar-links li:hover {
-    background-color: cornflowerblue;
+    background-color: #ECEFF4;
 }
 
 .toggle-button {
@@ -69,7 +69,7 @@ body {
 .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: white;
+    background-color: #D8DEE9;
     border-radius: 10px;
 }
 
