Minor changes made to notes/queries/organization

--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -207,6 +207,11 @@ hr {
   border-radius: 50%;
 }
 
+.fit {
+  max-width: 99%;
+  max-height: 99%;
+}
+
 /* open-sans-regular - vietnamese_latin-ext_latin_hebrew_greek-ext_greek_cyrillic-ext_cyrillic */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
