Minor changes made to notes/queries/organization

--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -90,6 +90,7 @@ html {
   color-scheme: light dark;
 }
 body {
+  background-color: #2e3440;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
