--- a/css/navbar.css
+++ b/css/navbar.css
@@ -12,7 +12,7 @@ body {
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-color: #2E3440;
+    background-color: #3b4252;
     color: #D8DEE9;
     border-bottom: 2px solid #D8DEE9;
 }
@@ -52,7 +52,7 @@ body {
 }
 
 .navbar-links li:hover {
-    background-color: #ECEFF4;
+    background-color: #4c566a;
 }
 
 .toggle-button {
