--- a/css/menu.css
+++ b/css/menu.css
@@ -8,13 +8,13 @@
 .container{
   width: 100%;
   height: 100vh;
-  background: #2192ff;
+  background: #2e3440;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 nav{
-  background: #fff;
+  background: #4c566a;
   border-radius: 9px;
   padding: 30px;
   box-shadow: 0 5px 20px rgba(0,0,0,0.4);
@@ -32,7 +32,7 @@ nav ul li:after{
   content: '';
   width: 0;
   height: 3px;
-  background: #2192ff;
+  background: #2e3440;
   position: absolute;
   left: 0;
   bottom: -10px;
