--- a/css/menu.css
+++ b/css/menu.css
@@ -6,25 +6,25 @@
   font-family: 'Poppins', sans-serif;
 }
 .container{
-  width: 100%;
-  height: 100vh;
-  background: #2e3440;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #3b4252;
+    color: #D8DEE9;
 }
 nav{
   background: #4c566a;
-  border-radius: 9px;
-  padding: 30px;
+  border-radius: 2;
+  padding: 0;
   box-shadow: 0 5px 20px rgba(0,0,0,0.4);
 }
 nav ul li{
   display: inline-block;
   list-style: none;
   font-size: 2rem;
-  padding: 0 10px;
-  margin: 0 20px;
+  padding: 0;
+  margin: 0;
   cursor: pointer;
   position: relative;
 }
