--- a/css/menu.css
+++ b/css/menu.css
@@ -22,9 +22,9 @@ nav{
 nav ul li{
   display: inline-block;
   list-style: none;
-  font-size: 2rem;
-  padding: 0;
-  margin: 0;
+  font-size: 1rem;
+  padding: 0 10px;
+  margin: 0 20px;
   cursor: pointer;
   position: relative;
 }
