revert hamburg changes

--- a/css/hamburg.css
+++ b/css/hamburg.css
@@ -1,10 +1,6 @@
 body{
-    position: absolute;
-    top: 1.20rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
+    display:grid;
+    place-items:right;
     height:100vh;
     background:#4c566a;
     margin:0;
