--- a/css/hamburg.css
+++ b/css/hamburg.css
@@ -1,6 +1,9 @@
-  check{
-    display:grid;
-    place-items:right;
+  label {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    cursor: pointer;
     height:100vh;
     background:#4c566a;
     margin:0;
