--- a/css/testnavbar.css
+++ b/css/testnavbar.css
@@ -129,26 +129,36 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 
 @media (max-width: 600px) {
-    body {
-        display: block;
-    }
-    
-    label {
-        display: block;
-    }
-
     .navbar {
         flex-direction: column;
         align-items: flex-start;
     }
 
+    /* Now the hamburgur menu will be visible */
     .toggle-button {
         display: flex;
     }
 
+    /* Now the links will disapper and */
     .navbar-links {
         display: none;
         width: 100%;
     }
 
-    .navbar-links ul
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links ul li {
+        text-align: center;
+    }
+
+    .navbar-links ul li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+}
