--- a/css/testnavbar.css
+++ b/css/testnavbar.css
@@ -14,7 +14,7 @@ label {
     position: absolute;
     top: -0.7rem;
     right: -0.7rem;
-    display: flex;
+    display: none;
     flex-direction: column;
     width: 70px;
     cursor: pointer;
