--- a/css/testnavbar.css
+++ b/css/testnavbar.css
@@ -167,4 +167,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     .toggle-button {
         display: none;
     }
+    label {
+        display: none;
+    }
 }
