--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,8 +3,62 @@
 }
 
 body {
+    display: grid;
+    place-items: right;
+    height: 100vh;
     margin: 0;
     padding: 0;
+}
+
+label {
+    position: absolute;
+    top: -0.7rem;
+    right: -0.7rem;
+    display: flex;
+    flex-direction: column;
+    width: 70px;
+    cursor: pointer;
+    transform: scale(0.5);
+}
+
+label span {
+    background: #d8dee9;
+    border-radius: 10px;
+    height: 7px;
+    margin: 7px 0;
+    transition: .4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+span:nth-of-type(1) {
+    width: 50%;
+}
+
+span:nth-of-type(2) {
+    width: 100%;
+}
+
+span:nth-of-type(3) {
+    width: 75%;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"]:checked~span:nth-of-type(1) {
+    transform-origin: bottom;
+    transform: rotatez(45deg) translate(8px, 0px)
+}
+
+input[type="checkbox"]:checked~span:nth-of-type(2) {
+    transform-origin: top;
+    transform: rotatez(-45deg)
+}
+
+input[type="checkbox"]:checked~span:nth-of-type(3) {
+    transform-origin: bottom;
+    width: 50%;
+    transform: translate(30px, -11px) rotatez(45deg);
 }
 
 .navbar {
@@ -23,7 +77,7 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.brand-title a{
+.brand-title a {
     text-decoration: none;
     display: block;
     color: #D8DEE9;
@@ -31,7 +85,7 @@ body {
 
 .navbar-links {
     height: 100%;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .navbar-links ul {
@@ -59,7 +113,7 @@ body {
     position: absolute;
     top: 1.20rem;
     right: 1rem;
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 30px;
@@ -73,7 +127,6 @@ body {
     border-radius: 10px;
 }
 
-/* The role of media query is that, it says if certain condition meet run the code of inside it, and if not then don't */
 @media (max-width: 600px) {
     .navbar {
         flex-direction: column;
@@ -106,5 +159,15 @@ body {
 
     .navbar-links.active {
         display: flex;
+    }
+}
+
+/* hide toggle button on larger devices */
+@media (min-width: 601px) {
+    .toggle-button {
+        display: none;
+    }
+    label {
+        display: none;
     }
 }
