--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -105,14 +105,14 @@ body {
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1 {
+  font-size: 3.2rem;
+  line-height: 3.6rem;
+  letter-spacing: 0;
+}
+h1 {
   margin-top: 0;
   margin-bottom: 16px;
   font-weight: 600;
-}
-h1 {
-  font-size: 24px;
-  line-height: 64px;
-  letter-spacing: 0;
 }
 
 /* Larger than phablet */
