--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -108,11 +108,13 @@ h1 {
   font-size: 3.2rem;
   line-height: 3.6rem;
   letter-spacing: 0;
-}
-h1 {
   margin-top: 0;
   margin-bottom: 16px;
   font-weight: 600;
+}
+h2 {
+  font-size: 2.8rem;
+  line-height: 3.2rem;
 }
 
 /* Larger than phablet */
