--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -117,6 +117,10 @@ h2 {
   line-height: 3.2rem;
   font-weight: 100;
 }
+h3 {
+  font-size: 20px;
+  line-height: 20px;
+}
 
 /* Larger than phablet */
 @media (min-width: 550px) {
