--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -84,6 +84,15 @@
   }
 }
 
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  color: #fff;
+  text-align: center;
+}
+
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* NOTE
