--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -89,9 +89,13 @@ footer {
   bottom: 0;
   width: 100%;
   height: 50px;
-  color: #fff;
+  color: #D8DEE9;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
