--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -113,6 +113,7 @@ body {
   line-height: 24px;
   font-weight: 400;
   font-family: -apple-system,BlinkMacSystemFont,segoe ui,Roboto,Oxygen-Sans,Ubuntu,Cantarell,helvetica neue,Helvetica,pingfang sc,STXihei,华文细黑,microsoft yahei,微软雅黑,SimSun,宋体,Heiti,黑体,sans-serif;
+  margin-bottom: 50px;
 }
 
 /* Typography
