--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -74,7 +74,7 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 
 html {
   font-size: 100%;
-  color-scheme: light dark;
+  color-scheme: dark light;
 }
 
 body {
