--- a/css/navbar.css
+++ b/css/navbar.css
@@ -66,15 +66,15 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
     position: relative;
     justify-content: space-between;
     align-items: center;
-    background-color: #3b4252;
-    color: #D8DEE9;
-    border-bottom: 2px solid #D8DEE9;
+    background-color: #282828;
+    color: #ebdbb2;
+    border-bottom: 2px solid #282828;
 }
 
 .brand-title {
     font-size: 2rem;
     margin: .5rem;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Berkeley Mono Variable', monospace;
 }
 
 .brand-title a {
@@ -84,7 +84,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 
 .navbar-links {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Berkeley Mono Variable', monospace;
 }
 
 .navbar-links ul {
@@ -100,7 +100,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .navbar-links li a {
     display: block;
     text-decoration: none;
-    color: #D8DEE9;
+    color: #ebdbb2;
     padding: 1rem;
 }
 
@@ -122,7 +122,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: #D8DEE9;
+    background-color: #282828;
     border-radius: 10px;
 }
 
