--- a/css/navbar.css
+++ b/css/navbar.css
@@ -105,7 +105,7 @@ input[type="checkbox"]:checked~span:nth-of-type(3) {
 }
 
 .navbar-links li:hover {
-    background-color: #4c566a;
+    background-color: #282828;
 }
 
 .toggle-button {
