--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
     padding: 0 20px;
     box-sizing: border-box;
   }
-  .column {
+  .column, .row, section {
     position: center;
     width: 100%;
     float: center;
